# perception_playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.py  camera.py  camera_info.py  config.py  example.py  example_t265.py  models.py  routes.py  stream.py  stream_rs.py  version.py
n1x_ws/src/n1x_core/: package.xml  setup.cfg  setup.py
n1x_ws/src/n1x_core/launch/: remote_driver.launch.py
server_app/: database.py  dependencies.py  main.py  models.py  security.py  users.db  web_cmd_pub.py
server_app/static/: scripts.js  style.css
server_app/templates/: bootstrap_admin.html  index.html  login.html
static/: scripts.js  style.css
templates/: base.html  index.html  login.html
test_cameras/cpp/: check_version.cpp  d435_demo.cpp  d435_full_demo.cpp  d435_ir_demo.cpp  dual_camera_demo.cpp  test_t265.cpp
test_cameras/python/: check_version.py  d435_demo.py  d435_full_demo.py  d435_ir_demo.py  d435_multifeed_demo.py  dual_camera_demo.py  t265_demo.py  test_both_cameras.py  test_t265.py  zed-mini_demo.py
test_scripts/: test_all_d435.py  test_d435.py  test_ir_d435.py  test_pyrealsense2.py  test_t265  test_t265.cpp  test_zedmini.py
